objects/SVMXC__Service_Request__c.object
<CustomObject>
    <description>This object can be used to store service request data from 3rd party CRM systems</description>
    <fields>
        <fullName>Accreditation__c</fullName>
        <label>Accreditation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Nuclear Plant</fullName>
                </value>
                <value>
                    <fullName>Special Access 001</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closure_Comment__c</fullName>
        <description>Comments on the Reason for Closure of the Service Request</description>
        <label>Closure Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>SVMXC__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>SVMXC__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DBin_Id__c</fullName>
        <description>[Middleware POC] - Id of the service request coming from DBin (Call Center)</description>
        <externalId>true</externalId>
        <label>DBin Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DEF_Company__c</fullName>
        <label>DEF_Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installation</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Service Requests (Installed Product)</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Technician_SR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Closure__c</fullName>
        <label>Reason for Closure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed_by_phone</fullName>
                    <label>Closed By Phone</label>
                </value>
                <value>
                    <fullName>Closed by Client</fullName>
                </value>
                <value>
                    <fullName>Work Order closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Name</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Initial_Response__c</fullName>
        <description>Initial response date and time</description>
        <label>Actual Initial Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Appointment_Duration__c</fullName>
        <description>Appointment Duration</description>
        <label>Appointment Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Closed by user</description>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_On__c</fullName>
        <description>Closed Date and Time</description>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the customer contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__ERP_External_ID__c</fullName>
        <description>External Id for Service Request in other system</description>
        <externalId>true</externalId>
        <label>ERP External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Start_Time__c</fullName>
        <description>Appointment requested start date and time</description>
        <label>Preferred Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Priority__c</fullName>
        <description>Priority of service request</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Problem_Description__c</fullName>
        <description>Problem Description</description>
        <label>Problem Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Name</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product serial name</description>
        <label>Serial Number</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Request_Source__c</fullName>
        <description>Origin of the Service Request</description>
        <label>Service Request Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <description>Status of the service request</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Open_Converted</fullName>
                    <label>Open - Converted</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Subject__c</fullName>
        <description>Subject of the service request</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Type__c</fullName>
        <description>Type of service request</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top-Level</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Service Requests (Top-Level)</relationshipLabel>
        <relationshipName>Service_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Request</label>
    <listViews>
        <fullName>All_service_requests</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Account__c</columns>
        <columns>Contract__c</columns>
        <columns>SVMXC__Status__c</columns>
        <columns>SVMXC__Subject__c</columns>
        <columns>SLA_Terms__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SVMXC__Closed_On__c</columns>
        <columns>Closure_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All service requests</label>
    </listViews>
    <listViews>
        <fullName>Service_requests_in_progress</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Account__c</columns>
        <columns>Contract__c</columns>
        <columns>SVMXC__Subject__c</columns>
        <columns>SVMXC__Problem_Description__c</columns>
        <columns>SLA_Terms__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SVMXC__Status__c</field>
            <operation>equals</operation>
            <value>Open_Converted</value>
        </filters>
        <label>Service requests in progress</label>
    </listViews>
    <listViews>
        <fullName>Service_requests_to_be_processed</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Account__c</columns>
        <columns>Contract__c</columns>
        <columns>SVMXC__Subject__c</columns>
        <columns>SVMXC__Problem_Description__c</columns>
        <columns>SLA_Terms__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SVMXC__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Service requests to be processed</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>